<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JikeContacts</string>
    <string name="btnAdd">Add</string>
    <string name="tvAddContacts">Add Contact</string>
    <string name="tvName">Name:</string>
    <string name="tvNumber">Number:</string>
    <string name="btnAddOK">OK</string>
    <string name="btnAddCancel">Cancel</string>
    <string name="detailName">Name</string>
    <string name="detailNameShow"/>
    <string name="detailNumber">Number</string>
    <string name="detailNumberShow"/>
    <string name="Saved">Saved</string>
    <string name="Cancel">Cancel</string>
    <string name="menuTitle">Please select</string>
    <string name="call">Make a call</string>
    <string name="sms">Send a Message</string>
</resources>